<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Ciudades" android:background="#3F51B5">
    <TextView
            android:text="@string/txt_bienvenida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/txtview_bien" android:layout_margin="16dp"
            android:textColor="#FFFFFF"/>
    <Button
            android:text="@string/btn_concepcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/btn_ciudad_concepcion"
            style="@style/Widget.AppCompat.Button.Borderless" android:textColor="#FFFFFF"/>
    <Button
            android:text="@string/btn_valdivia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/btn_ciudad_valdivia"
            style="@style/Widget.AppCompat.Button.Borderless" android:textColor="#FFFFFF"/>

    <Button
            android:text="@string/btn_shanghai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/btn_ciudad_shanghai"
            style="@style/Widget.AppCompat.Button.Borderless" android:textColor="#FFFFFF"/>
</LinearLayout>