<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="#3F51B5">
    <TextView
            android:text="@string/txt_grados"
            android:layout_width="182dp"
            android:layout_height="98dp" android:id="@+id/txtview_grados" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp" android:layout_marginTop="16dp" android:layout_marginStart="16dp"
            app:layout_constraintVertical_bias="0.317"
            android:textSize="72sp" app:layout_constraintHorizontal_bias="0.497" android:textColor="#FFFFFF"/>
    <TextView
            android:text="@string/txt_ciudad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtview_ciudad"
            app:layout_constraintTop_toBottomOf="@+id/txtview_grados" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintVertical_bias="0.088" android:textSize="36sp"
            android:textColor="#FFFFFF"/>
    <TextView
            android:text="@string/txt_tiempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtview_tiempo"
            app:layout_constraintTop_toBottomOf="@+id/txtview_ciudad" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintVertical_bias="0.11"
            android:textSize="30sp" android:textColor="#F58B8686"/>
</android.support.constraint.ConstraintLayout>